--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,12 +1,14 @@
 tasks:
   - name: terraform
     before: |
+      source ./bin/bin/set_tf_alias
       source ./bin/install_terraform_cli
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     before: |
-      source ./bin/install_terraform_cli
+      source ./bin/bin/set_tf_alias
+      source ./bin/install_terraform_cli  
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
