--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,12 +3,14 @@ tasks:
     before: |
       source ./bin/set_tf_alias
       source ./bin/install_terraform_cli
+      source ~/.bash_profile
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     before: |
       source ./bin/set_tf_alias
       source ./bin/install_terraform_cli  
+      source ~/.bash_profile
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
