--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,6 +12,7 @@ tasks:
       source ./bin/set_tf_alias
       source ./bin/install_terraform_cli  
       source ~/.bash_profile
+      source ./bin/install_aws_cli
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
